app/assets/stylesheets/footer.css.scss
$footer-height: 60px;

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
  margin: 0 auto -$footer-height;

  padding: 0 0 $footer-height;
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto;
  /* Negative indent footer by its height */
  margin: 0 auto -60px;
  /* Pad bottom by footer height */
  padding: 0 0 60px;
}

#footer a{
  color: white;
  font-weight: 100;
}
/* Set the fixed height of the footer here */
#footer {
  height: $footer-height;
  color: white;
  background-color: rgba(36,32,33,0.9);
  font-family: "Helvetica Neue", Helvetica;
  padding: 10px 0px;
  margin-top: 30px;
}

#footer {
  margin-bottom: 0px;
}

.social-button {
  width: 32px;
  margin: 4px;
}


.social a:footer {
  text-decoration: none;
}


$footer-height-mobile: 200px;
@media (max-width: 750px) {
  #footer {
    height:$footer-height-mobile;
  }

  #wrap {
    margin: 0 auto -$footer-height-mobile;
    /* Pad bottom by footer height */
    padding: 0 0 $footer-height-mobile;
  }

  #footer .social {
    margin-top:10px;
  }

}

